--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_CLS.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_CLS.cfg
@@ -8,7 +8,7 @@
 	}
 }
 
-@PART[WBI_CrewCab,WBI_BuffaloAirlock,WBI_LongPassengerCab,WBI_shortPassengerCab]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace]  
+@PART[WBI_SCPAdapter,WBI_CrewCab,WBI_BuffaloAirlock,WBI_LongPassengerCab,WBI_shortPassengerCab]:HAS[!MODULE[ModuleConnectedLivingSpace]]:NEEDS[ConnectedLivingSpace]  
 {
 	MODULE
 	{
