--- a/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/ModuleManagerPatches/MM_Snacks.cfg
@@ -1,4 +1,4 @@
-@PART[WBI_CrewCab]:FOR[SnacksUtils]
+@PART[WBI_CrewCab]:NEEDS[SnacksUtils]
 {
 	MODULE
 	{
@@ -41,7 +41,7 @@
 	}
 }
 
-@PART[WBI_LongPassengerCab]
+@PART[WBI_LongPassengerCab]:NEEDS[SnacksUtils]
 {
 	//This is calibrated for 4 kerbals at 100% efficiency
 	//when they consume 1 snack per meal and 1 meal per day. For your custom recycler,
@@ -93,7 +93,7 @@
 	}
 }
 
-@PART[WBI_ShortPassengerCab]
+@PART[WBI_ShortPassengerCab]:NEEDS[SnacksUtils]
 {
 	//This is calibrated for 2 kerbals at 100% efficiency
 	//when they consume 1 snack per meal and 1 meal per day. For your custom recycler,
