--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -245,7 +245,7 @@ PART
 	MODULE
 	{
 		name = WBIBiomeMultiExperiment
-		experimentID = WBIGeoScienceExperiment
+		experimentID = WBIBiomeMultiExperiment
 		experimentActionName = Take Core Sample
 		resetActionName = Discard Core Sample
 		reviewActionName = Review Core Sample
@@ -291,4 +291,80 @@ PARTUPGRADE
 	title = Crew Cabin Science Upgrade
 	manufacturer = Wild Blue Industries
 	description = Advances in miniaturization enables the Crew Cabin to perform geological surveys.
+}
+
+
+//Experiment definit to follow
+//Read at your own risk.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+EXPERIMENT_DEFINITION
+{
+	id = WBIBiomeMultiExperiment
+	title = Biome Research
+	baseValue = 5
+	scienceCap = 50
+	dataScale = 3
+	requireAtmosphere = False
+	situationMask = 3
+	biomeMask = 3
+
+	RESULTS
+	{
+		default = Soil samples suggest some kind of volcanic activity in the distant past.
+		default = These core samples seem to have two different compositions that indicate that some resources come from asteroid impacts.
+		default = The core sample was contaminated, but the surrounding landscape has an interesting tectonic history. Numerous cracks in the ground indicate several faults in the area.
+		default = Layers of sedimentary rock in the core sample indicate that water once flowed in this area. Perhaps there is water in an underground aquifer.
+		default = This core sample has hematite spherules, popularly known as "blueberries" throughout the strata. They also taste terrible when added to pancakes.
+		default = You find perchlorate salt deposits in the core sample. Perhaps there is water somewhere else in the area.
+		default = The core samples contain basalt along with traces of gypsum, kieserite, opaline silica, and phyllosilicates. This seems to be pretty common for this area.
+		default = A core sample from this area has a high percentage of clay.
+		default = There appear to be flecks of a strange blue substance in the core samples. Spectral analysis hasn't been able to identify the substance, and it glows in certain lights.
+		default = A layer of iron oxide in the core samples of this area suggests that an asteroid impacted the area.
+		default = Several core samples consist of volcanic rock, suggesting volcanic activity in this region.
+		default = There are traces of gold in the core sample. Gold rush, anyone?
+		default = Somebody ate the core sample, it looked like layered chocolate cake.
+		default = The sample has precursor chemicals necessary for life to occur. Perhaps there is some kind of life somewhere else in the region?
+		default = This unassuming core sample contains rock, soil, and dust- not unlike regolith!
+	}
 }
