--- a/GameData/WildBlueIndustries/Buffalo/Spaces/BuffaloCabASET.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Spaces/BuffaloCabASET.cfg
@@ -1,4 +1,4 @@
-INTERNAL:NEEDS[ASET_PROPS]
+INTERNAL
 {
 	name = WBI_BuffaloCabSpaceASET
 	MODEL
@@ -23,6 +23,20 @@ INTERNAL:NEEDS[ASET_PROPS]
 	}
 	PROP
 	{
+		name = WBI_PilotSeat
+		position = -0.367,-0.464,0.024
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = WBI_PilotSeat
+		position = 0.367,-0.464,0.024
+		rotation = 0,0,0,1
+		scale = 1,1,1
+	}
+	PROP
+	{
 		name = ABORTbuttonV2
 		position = 0,-0.05370028,-0.4501484
 		rotation = 0.6087615,0,0,0.7933534
@@ -32,14 +46,14 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = Alarm_Ablation
 		position = -0.1240656,-0.06192837,-0.4545964
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000017,0.9999822
 	}
 	PROP
 	{
 		name = Alarm_HighQ
 		position = -0.1240656,-0.09027188,-0.4470018
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000033,0.9999675
 	}
 	PROP
@@ -95,7 +109,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = AlarmShieldOverHeat
 		position = -0.063807,-0.06192837,-0.4545964
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000009,0.9999903
 	}
 	PROP
@@ -396,7 +410,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = IndicatorCircular_CHARGE
 		position = -0.300682,-0.017729,-0.459905
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -410,7 +424,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = IndicatorCircular_FUEL
 		position = -0.239657,-0.017659,-0.459924
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -424,7 +438,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = IndicatorCircular_MONOPROP
 		position = -0.118101,-0.017718,-0.459908
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.053713,0.9999997
 	}
 	PROP
@@ -438,7 +452,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = IndicatorCircular_Oxidizer
 		position = -0.17885,-0.017659,-0.459924
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -471,58 +485,44 @@ INTERNAL:NEEDS[ASET_PROPS]
 	}
 	PROP
 	{
-		name = LifeSupportMonitor
-		position = 0.731609,-0.1828276,-0.09261014
-		rotation = 0,-0.7071068,0,0.7071068
-		scale = 0.7,0.7,0.7
-	}
-	PROP
-	{
-		name = LifeSupportMonitor
-		position = -0.731609,-0.182828,-0.09261
-		rotation = 0,0.7071068,0,0.7071068
-		scale = 0.7,0.7,0.7
-	}
-	PROP
-	{
 		name = LowALTIndicator
 		position = -0.08125362,-0.2350521,-0.408208
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000738,0.9992622
 	}
 	PROP
 	{
 		name = LowChargeIndicator
 		position = -0.1240656,-0.1193808,-0.4392021
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000061,0.9999388
 	}
 	PROP
 	{
 		name = LowFuelIndicator
 		position = -0.1240656,-0.1484924,-0.4314016
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000113,0.9998861
 	}
 	PROP
 	{
 		name = LowMonopropIndicator
 		position = -0.1240656,-0.2059432,-0.4160077
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000396,0.9996043
 	}
 	PROP
 	{
 		name = LowOxidizerIndicator
 		position = -0.1240656,-0.1768365,-0.4238068
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.000212,0.9997878
 	}
 	PROP
 	{
 		name = LowTWRIndicator
 		position = 0.08128306,-0.2350521,-0.408208
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1.001378,0.998624
 	}
 	PROP
@@ -669,7 +669,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = RasterPropMonitorBasicMFD
 		position = 0.3548503,0.4073806,-0.3421244
-		rotation = 0.258819,-6.181724E-08,-6.181724E-08,0.9659258
+		rotation = 0.258819,-6.181725E-08,-6.181725E-08,0.9659259
 		scale = 0.52,0.52,0.52
 	}
 	PROP
@@ -998,7 +998,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_AntiNormal
 		position = -0.28562,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1012,7 +1012,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_AntiTarget
 		position = -0.212618,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1026,7 +1026,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_Maneuver
 		position = -0.140388,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1040,7 +1040,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_Normal
 		position = -0.321773,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1054,7 +1054,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_Prograde
 		position = -0.394665,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1068,7 +1068,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_Retrograde
 		position = -0.358232,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1082,7 +1082,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_Stab
 		position = -0.176757,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1096,7 +1096,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swPush_SAS_Target
 		position = -0.249214,-0.242806,-0.399985
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.9999997
 	}
 	PROP
@@ -1138,7 +1138,7 @@ INTERNAL:NEEDS[ASET_PROPS]
 	{
 		name = swToggleEngines
 		position = -0.509136,-0.017502,-0.458449
-		rotation = 0.6087613,0,0,0.7933534
+		rotation = 0.6087614,0,0,0.7933534
 		scale = 1,1,0.8999996
 	}
 	PROP
@@ -1154,5 +1154,19 @@ INTERNAL:NEEDS[ASET_PROPS]
 		position = 0.1268455,-0.289019,-0.101174
 		rotation = 0,0,0,1
 		scale = 0.597433,0.597433,0.597433
+	}
+	PROP
+	{
+		name = WBI_Monitor
+		position = -0.743,-0.215,-0.039
+		rotation = 0,1,0,-1.629207E-07
+		scale = 0.8,0.8,0.8
+	}
+	PROP
+	{
+		name = WBI_Monitor
+		position = 0.743,-0.215,-0.039
+		rotation = 0,0,0,1
+		scale = 0.8,0.8,0.8
 	}
 }
