--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_Snacks.cfg
@@ -69,6 +69,8 @@
 
 @GREENHOUSE[Prairie]:NEEDS[SnacksUtils]
 {
+	needs = SnacksUtils
+
 	MODULE
 	{
 		name = WBIGreenhouse
@@ -149,6 +151,8 @@
 
 @PATH_INDUSTRY[CropWorks]:NEEDS[SnacksUtils]
 {
+	needs = SnacksUtils
+
 	MODULE
 	{
 		name = WBIGreenhouse
