--- a/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/ModuleManagerPatches/MM_USILS.cfg
@@ -145,7 +145,6 @@
 
 @GREENHOUSE[Prairie]:NEEDS[USILifeSupport]
 {
-
 	MODULE
 	{
 		name = WBIGreenhouse
@@ -245,6 +244,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 	toolTip = This greenhouse produces food continually instead of after a set growth period.
 	toolTipTitle = Your First Greenhouse!
 	capacityFactor = 1.0
+	needs = LifeSupport
 
 	MODULE
 	{
@@ -446,7 +446,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 {
 	MODULE
 	{
-		name = ModuleLifeSupport
+		name = ModuleUSILifeSupport
 	}
 
 	MODULE 
@@ -484,7 +484,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 {
 	MODULE
 	{
-		name = ModuleLifeSupport
+		name = ModuleUSILifeSupport
 	}
 
 	MODULE 
@@ -521,7 +521,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 {
 	MODULE
 	{
-		name = ModuleLifeSupport
+		name = ModuleUSILifeSupport
 	}
 	
 	RESOURCE
@@ -544,7 +544,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 {
 	MODULE
 	{
-		name = ModuleLifeSupport
+		name = ModuleUSILifeSupport
 	}
 	
 	RESOURCE
@@ -582,7 +582,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 
 	MODULE
 	{
-		name = ModuleLifeSupportRecycler
+		name = ModuleUSILifeSupportRecycler
 		CrewCapacity = 4
 		RecyclePercent = .90
 		ConverterName = Life Support
@@ -640,7 +640,7 @@ GREENHOUSE:NEEDS[USILifeSupport]
 {
 	MODULE
 	{
-		name = ModuleLifeSupport
+		name = ModuleUSILifeSupport
 	}
 
 	MODULE 
