--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Switchback2.cfg
@@ -9,14 +9,34 @@ PART
 		model = WildBlueIndustries/Pathfinder/Assets/Switchback2
 	}
 	rescaleFactor = 1
-	node_stack_mount = 0, 0, 0, 0, -1, 0, 3
-	node_stack_top = 0, 1.309342, 0, 0, 1, 0, 2
-	node_stack_right = 0.5740595, 0.7747217, 0, 1, 0, 0, 2
-	node_stack_left = -0.5740595, 0.7747217, 0, -1, 0, 0, 2
-	node_stack_back = 0, 0.7747217, 0.5740595, 0, 0, 1, 2
-	node_stack_front = 0, 0.7747217, -0.5740595, 0, 0, -1, 2
+	node_stack_bottom = 0, 0, 0, 0, -1, 0, 3
 	node_attach = 0, 0, 0, 0, -1, 0, 2
+	NODE
+	{
+		name = Top
+		transform = nodeTop
+	}
+	NODE
+	{
+		name = Left
+		transform = nodeLeft
+	}
 
+	NODE
+	{
+		name = Right
+		transform = nodeRight
+	}
+	NODE
+	{
+		name = Front
+		transform = nodeFront
+	}
+	NODE
+	{
+		name = Back
+		transform = nodeBack
+	}
 	TechRequired = specializedConstruction
 	entryCost = 3800
 	cost = 1800
@@ -50,8 +70,24 @@ PART
 		RESOURCE
 		{
 			name = ElectricCharge
-			rate = 0.02777778
+			rate = 0.01777778
 		}
+		hasHibernation = True
+		hibernationMultiplier = 0.001
+	}
+
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = INTERNAL
+		packetInterval = 1.0
+		packetSize = 2
+		packetResourceCost = 12.0
+		requiredResource = ElectricCharge
+		antennaPower = 5000
+		optimumRange = 2500
+		packetFloor = .1
+		packetCeiling = 5
 	}
 
 	MODULE:NEEDS[KIS]
@@ -69,7 +105,7 @@ PART
 		runSpeed = 0.8
 		allowPartAttach = AllowedWithKisTool
 		allowStaticAttach = AllowedAlways
-		staticAttachBreakForce = 2000
+		staticAttachBreakForce = 4000
 	}
 
 	MODULE:NEEDS[KIS]
