--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Casa.cfg
@@ -9,12 +9,12 @@ PART
 		model = WildBlueIndustries/Pathfinder/Assets/Ponderosa2
 	}
 	rescaleFactor = 1
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_mount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
+	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_front = 0, 0.0, -5.0, 0, 0, -1, 2
 	node_stack_left = -1.93, 0.0, -3.071, -1, 0, 0, 2
 	node_stack_right = 1.93, 0.0, -3.071, 1, 0, 0, 2
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 
 	TechRequired = advExploration
 	entryCost = 18000
