--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Chuckwagon.cfg
@@ -27,12 +27,12 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_mount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
+	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_front = 0, 0.0, -5.064, 0, 0, -1, 2
 	node_stack_left = -1.782, 0.0, -3.282, -1, 0, 0, 2
 	node_stack_right = 1.782, 0.0, -3.282, 1, 0, 0, 2
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 
 	// --- editor parameters ---
 	TechRequired = specializedConstruction
