--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Hacienda.cfg
@@ -26,14 +26,14 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
-	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_mount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
+	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_stack_front = 0, 0.0, -8.677, 0, 0, -1, 2
 	node_stack_left = -2.08, 0.0, -3.533, -1, 0, 0, 2
 	node_stack_right = 2.08, 0.0, -3.533, 1, 0, 0, 2
 	node_stack_left2 = -2.08, 0.0, -6.704, -1, 0, 0, 2
 	node_stack_right2 = 2.08, 0.0, -6.704, 1, 0, 0, 2
+	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
 
 	// --- editor parameters ---
 	TechRequired = specializedConstruction
