--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/GeologyLab.cfg
@@ -107,11 +107,12 @@ PATH_HABITATION
 
 		defaultExperiment = WBIEmptyExperiment
 		canCreateExperiments = true
+		needsConnectionToKSC = false
 		creationTags = geologyLab
 		checkCreationResources = false
 		experimentCreationSkill = ScienceSkill
 		defaultCreationResource = ResearchKits
-		minimumCreationAmount = 5.0
+		minimumCreationAmount = 25.0
 		checkCreationResources = true
 
 		ConverterName = Geology Lab
