--- a/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SunburnLab.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Templates/Production/SunburnLab.cfg
@@ -69,53 +69,80 @@ PATH_SCIENCE
 	MODULE
 	{
 		name = ModuleResourceConverter
-		ConverterName = FusionPellets
+		ConverterName = Fusion Fuels
 		StartActionName = Start Fusion Pellets
 		StopActionName = Stop Fusion Pellets
-		AutoShutdown = false
+		AutoShutdown = true
 		GeneratesHeat = false
+		DefaultShutoffTemp = .8
 		UseSpecialistBonus = true
 		SpecialistEfficiencyFactor = 0.2
 		SpecialistBonusBase = 0.05
 		ExperienceEffect = ConverterSkill
 		EfficiencyBonus = 1
 
-		 
-		INPUT_RESOURCE
+		TemperatureModifier
 		{
-			ResourceName = Water
-			Ratio = 1.75
-			FlowMode = STAGE_PRIORITY_FLOW
+			key = 0 100000
+			key = 750 50000
+			key = 1000 10000
+			key = 1250 500	
+			key = 2000 50	
+			key = 4000 0
+		}				
+		ThermalEfficiency 
+		{
+			key = 0 0 0 0
+			key = 500 0.1 0 0
+			key = 1000 1.0 0 0
+			key = 1250 0.1 0 0
+			key = 3000 0 0 0 
 		}
-
+	 
 		INPUT_RESOURCE
 		{
 			ResourceName = Ore
-			Ratio = 1.75
+			Ratio = 15
 			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
+  		}
+		INPUT_RESOURCE
+		{
+			ResourceName = Water
+			Ratio = 1.5
+			FlowMode = STAGE_PRIORITY_FLOW
+  		}
 		INPUT_RESOURCE
 		{
 			ResourceName = Minerals
-			Ratio = 0.51
+			Ratio = 0.01
 			FlowMode = STAGE_PRIORITY_FLOW
-		}
-
+  		}
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
 			Ratio = 30
 		}
-
 		OUTPUT_RESOURCE
 		{
 			ResourceName = FusionPellets
-			Ratio = 0.21
+			Ratio = 0.00045
 			DumpExcess = false
 			FlowMode = STAGE_PRIORITY_FLOW
 		}
-	}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = Oxygen
+			Ratio = 27.78
+			DumpExcess = true
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = LqdHydrogen
+			Ratio = 0.78455
+			DumpExcess = true
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
 
 	MODULE
 	{
