--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/WheelJack.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/WheelJack.cfg
@@ -9,8 +9,13 @@ PART
 		model = WildBlueIndustries/Buffalo/Assets/WheelJack
 	}
 	rescaleFactor = 1
-	node_stack_top = 0, 0.2915, 0, 0, 1, 0, 1
-	node_stack_bottom = 0, -0.2915, 0, 0, -1, 0, 1
+	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
+	NODE
+	{
+		name = Top
+		transform = dockingNode
+		size = 0
+	}
 
 	TechRequired = generalConstruction
 	entryCost = 3200
@@ -19,7 +24,7 @@ PART
 	subcategory = 0
 	title = Wheel Jack
 	manufacturer = Wild Blue Industries
-	description = Not to be confused with a transforming robot that was voiced by a famous actor, the wheel jack serves as the foundation for building a Buffalo MSEV. Simply drop it on the ground, then grab it and bolt it into the ground. If you can run into the wheel jack and move it, then it's not bolted properly. Once bolted firmly into the ground, you can attach the chassis and other components of the MSEV. Once assembled, simply detonate the wheel jack. To disassemble an MSEV, bolt a wheel jack to the bottom of a chassis before removing the MSEV's components. Remember, it takes an Engineer to assemble the MSEV, but anybody can stack boxes.
+	description = Not to be confused with a transforming robot that was voiced by a famous actor, the wheel jack serves as the foundation for building a Buffalo MSEV. Simply bolt it into the ground. If you can run into the wheel jack and move it, then it's not bolted properly. Once bolted firmly into the ground, attach a Buffalo Assembly Port to the WheelJack's top node (be sure that the Assembly Port's RED side is up). Then attach the chassis or other components to the Buffalo Assembly Port. Finally, to detach the assembled vehicle, switch to the space center and back to the rover, then decouple the Assembly Port.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
@@ -41,15 +46,18 @@ PART
 		name = ModuleKISItem
 		volumeOverride = 150
 		stackable = true
-		allowPartAttach = 2
-		allowStaticAttach = 1
-		staticAttachBreakForce = 40
+		allowPartAttach = AllowedWithKisTool
+		allowStaticAttach = AllowedAlways
+		staticAttachBreakForce = 4000
 	}
 
-//	MODULE
-//	{
-//		name = WBISelfDestruct
-//	}
+	MODULE
+	{
+		name = ModuleDockingNode
+		referenceAttachNode = Top
+		nodeType = size0
+		stagingEnabled = False
+	}
 
 	DRAG_CUBE
 	{
