--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Structural/Saddle.cfg
@@ -9,8 +9,14 @@ PART
 		model = WildBlueIndustries/Pathfinder/Assets/MiniSlab
 	}
 	rescaleFactor = 1
-	node_stack_top = 0, 0.20, 0, 0, 1, 0, 3
-	node_stack_bottom = 0, -0.03, 0, 0, -1, 0, 3
+	node_stack_top = 0, 0.2456, 0, 0, 1, 0, 1
+	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
+	NODE
+	{
+		name = Plug1
+		transform = node1
+		size = 0
+	}
 
 	TechRequired = spaceExploration
 	entryCost = 3200
@@ -38,12 +44,12 @@ PART
 
 	MODULE:NEEDS[KIS]
 	{
-	    name = ModuleKISItem
-	    volumeOverride = 100
-	    stackable = true
-	    allowPartAttach = 2
-	    allowStaticAttach = 1
-	    staticAttachBreakForce = 2000
+		name = ModuleKISItem
+		volumeOverride = 100
+		stackable = true
+		allowPartAttach = AllowedWithKisTool
+		allowStaticAttach = AllowedAlways
+		staticAttachBreakForce = 4000
 	}
 
 	MODULE:NEEDS[KAS]
