--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/OldFaithful.cfg
@@ -27,9 +27,9 @@ PART
 
 	// --- node definitions ---
 	// definition format is Position X, Position Y, Position Z, Up X, Up Y, Up Z
+	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
+	node_stack_KISMount = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	node_attach = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_mount = 0.0, 0.0, 0.0, 0.0, 0.0, -1.0, 2
-	node_stack_back = 0.0, 0.0, 0.0, 0.0, 0.0, 1.0, 2
 	
 	// --- editor parameters ---
 	TechRequired = advConstruction
