--- a/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
+++ b/GameData/WildBlueIndustries/Pathfinder/Parts/Utility/Sombrero.cfg
@@ -10,6 +10,24 @@ PART
 	}
 	rescaleFactor = 1
 	node_stack_bottom = 0, 0, 0, 0, -1, 0, 1
+	NODE
+	{
+		name = Plug1
+		transform = node1
+		size = 0
+	}
+	NODE
+	{
+		name = Plug2
+		transform = node2
+		size = 0
+	}
+	NODE
+	{
+		name = Plug3
+		transform = node3
+		size = 0
+	}
 
 	TechRequired = advElectrics
 	entryCost = 4600
@@ -76,6 +94,7 @@ PART
 		breakForce = 30
 		nodeTransformName = plugPort1
 	}
+
 	MODULE:NEEDS[KAS]
 	{
 		name = KASModuleStrut 
